--- a/src/gedcom_anonymizer_lib/dune
+++ b/src/gedcom_anonymizer_lib/dune
@@ -4,7 +4,7 @@
   (name gedcom_anonymizer_lib)
   (public_name gedcom_anonymizer_lib)
   (wrapped true)
-  (libraries ez_file ez_cmdliner str )
+  (libraries ez_file str )
   
   
   )
