--- a/src/gedcom_anonymizer_lib/package.toml
+++ b/src/gedcom_anonymizer_lib/package.toml
@@ -46,7 +46,7 @@ gen-version = "version.ml"
 #   ez_file = ">=0.1 <1.3"
 #   base-unix = { libname = "unix", version = ">=base" } 
 [dependencies]
-ez_cmdliner = "0.4.2"
+#ez_cmdliner = "0.4.2"
 ez_file = "0.2"
 base-unix = { libname = "str", version = ">=base" }
 
